--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,74 @@
  - Copyright (c) 2025. All rights reserved
 -->
 <resources>
+
+    <!-- App -->
     <string name="example">Example</string>
+
+    <!-- Handler -->
+    <string name="please_verify_your_email">Please verify your email</string>
+    <string name="check_your_internet_connection">Check your internet connection</string>
+    <string name="timeout">Timeout</string>
+    <string name="please_try_again_later">At the moment we cannot perform this action, please try again later</string>
+
+    <!-- Text Fields -->
+    <string name="email_icon">Email Icon</string>
+    <string name="password_icon">Password Icon</string>
+
+    <!-- Firebase Handler -->
+    <string name="email_is_already_registered">The email address is already in use by another account</string>
+    <string name="invalid_user">Invalid User</string>
+    <string name="invalid_credentials">Invalid credentials</string>
+    <string name="we_have_blocked_all_request_from_this_device_due_to_unusual_activity_try_again_later">We have blocked all request from this device due to unusual activity, try again later</string>
+
+    <!-- Loading Form -->
+    <string name="enter_your_email">Enter your email</string>
+    <string name="email_is_invalid">Email is invalid</string>
+    <string name="enter_your_password">Enter your password</string>
+
+    <!-- Welcome Screen -->
+    <string name="welcome">Welcome</string>
+    <string name="welcome_to_the_app_that_helps_you_manage_your_sales">Welcome to the app that helps you manage your sales</string>
+    <string name="sign_in">Sign in</string>
+    <string name="register">Register</string>
+
+    <!-- Loading Screen -->
+    <string name="back">Back</string>
+    <string name="welcome_come_back">Welcome come back</string>
+    <string name="here_you_can_login_with_your_credentials">Here you can login with your credentials</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot password</string>
+
+    <!-- Recover Screen -->
+    <string name="recover_password">Recover password</string>
+    <string name="here_you_can_recover_your_password">Here you can recover your password</string>
+    <string name="recover">Recover</string>
+
+    <!-- Validate Recover Screen -->
+    <string name="the_email_has_been_sent">The email has been sent</string>
+    <string name="the_email_has_been_sent_to_reset_your_password">The email has been sent to reset your password</string>
+
+    <!-- Register Form -->
+    <string name="the_password_cannot_be_less_than_6_characters">The password cannot be less than 6 characters</string>
+    <string name="please_confirm_your_password">Please confirm your password</string>
+    <string name="passwords_do_not_match">Passwords do not match</string>
+
+    <!-- Register Screen -->
+    <string name="register_account">Register account</string>
+    <string name="here_you_can_register_a_new_account">Here you can register a new account</string>
+    <string name="enter_your_password_to_confirm">Enter your password to confirm</string>
+
+    <!-- Validate Register Screen -->
+    <string name="email_sent">Email sent</string>
+    <string name="verify_your_email">Verify your email</string>
+    <string name="please_verify_and_return_to_the_application_to_continue_your_registration">Please verify and return to the application to continue your registration</string>
+    <string name="verified">Verified</string>
+
+    <!-- Register Success Screen -->
+    <string name="congratulations_account_created_successfully">Congratulations, account created successfully</string>
+    <string name="account_created_successfully">Account created successfully</string>
+    <string name="sign_in_and_start_making_your_sales">Sign in and start making your sales</string>
+    <string name="accept">Accept</string>
+
 </resources>
