--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="example">Example</string>
 
     <!-- Handler -->
-    <string name="please_verify_your_email">Please verify your email</string>
+    <string name="please_verify_your_email">Please create o verify your email</string>
     <string name="check_your_internet_connection">Check your internet connection</string>
     <string name="timeout">Timeout</string>
     <string name="please_try_again_later">At the moment we cannot perform this action, please try again later</string>
